--- a/k_means.ipynb
+++ b/k_means.ipynb
@@ -372,11 +372,9 @@
     "        #update step:\n",
     "        for cluster in range(k):\n",
     "            mask = (labels==cluster)\n",
-    "            if np.any(mask):\n",
-    "                centroids[cluster] = px[mask].mean(axis=0)\n",
-    "            else:\n",
-    "                random_idx = np.random.randint(0, num_pxs)\n",
-    "                centroids[cluster] = flattened_img[random_idx].astype(float) \n",
+    "            \n",
+    "            if np.any(mask): centroids[cluster] = px[mask].mean(axis=0)\n",
+    "            else: centroids[cluster] = flattened_img[np.random.randint(0, num_pxs)].astype(float) \n",
     "\n",
     "        if np.allclose(old_labels, labels): break #k_means finished\n",
     "\n",
@@ -476,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "d10738b4",
    "metadata": {},
    "outputs": [
