time comparisons for different img resolutions

--- a/mean_shift.ipynb
+++ b/mean_shift.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a2ff4660",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d2d20351",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "d5d7bc72",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "(720, 1280, 3)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "73304dc1",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "        [15, 13, 14]]], shape=(720, 1280, 3), dtype=uint8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f114a2e1",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1203,7 @@
        " ...]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "9eb54cd1",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1244,7 @@
        "       [ 719, 1279,   15,   13,   14]], shape=(921600, 5))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "1e9848aa",
    "metadata": {},
    "outputs": [],
@@ -1275,17 +1275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "abb942c1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x130963310>"
+       "<matplotlib.image.AxesImage at 0x17d80d090>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f26db319",
    "metadata": {},
    "outputs": [
@@ -1316,7 +1316,7 @@
        "np.float64(1.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "662d14dd",
    "metadata": {},
    "outputs": [
@@ -1337,7 +1337,7 @@
        "np.uint8(255)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "id": "25a42d80",
    "metadata": {},
    "outputs": [
@@ -1357,16 +1357,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 14400/14400 [00:06<00:00, 2199.91it/s]\n",
-      "100%|██████████| 14400/14400 [00:05<00:00, 2526.46it/s]\n",
-      "100%|██████████| 14400/14400 [00:05<00:00, 2466.23it/s]\n",
-      "100%|██████████| 14400/14400 [00:05<00:00, 2501.83it/s]\n",
-      "100%|██████████| 14400/14400 [00:05<00:00, 2460.62it/s]\n",
-      "100%|██████████| 14400/14400 [00:05<00:00, 2422.65it/s]\n",
-      "100%|██████████| 14400/14400 [00:05<00:00, 2415.46it/s]\n",
-      "100%|██████████| 14400/14400 [00:05<00:00, 2409.95it/s]\n",
-      "100%|██████████| 14400/14400 [00:05<00:00, 2574.99it/s]\n",
-      "100%|██████████| 14400/14400 [00:05<00:00, 2553.07it/s]\n"
+      "100%|██████████| 14400/14400 [00:06<00:00, 2309.24it/s]\n",
+      "100%|██████████| 14400/14400 [00:05<00:00, 2677.47it/s]\n",
+      "100%|██████████| 14400/14400 [00:05<00:00, 2784.53it/s]\n",
+      "100%|██████████| 14400/14400 [00:05<00:00, 2798.77it/s]\n",
+      "100%|██████████| 14400/14400 [00:05<00:00, 2873.47it/s]\n",
+      "100%|██████████| 14400/14400 [00:05<00:00, 2802.03it/s]\n",
+      "100%|██████████| 14400/14400 [00:05<00:00, 2811.43it/s]\n",
+      "100%|██████████| 14400/14400 [00:05<00:00, 2775.18it/s]\n",
+      "100%|██████████| 14400/14400 [00:05<00:00, 2744.36it/s]\n",
+      "100%|██████████| 14400/14400 [00:05<00:00, 2845.76it/s]\n"
      ]
     }
    ],
@@ -1438,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 13,
    "id": "493cb510",
    "metadata": {},
    "outputs": [
@@ -1446,23 +1446,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 924/924 [00:00<00:00, 27919.72it/s]\n"
+      "100%|██████████| 924/924 [00:00<00:00, 26321.94it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean shift FPS (on SLIC superpixels):  29.27572608170644\n"
+      "Mean shift FPS (on SLIC superpixels):  27.586119807424165\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x3402b7410>"
+       "<matplotlib.image.AxesImage at 0x31faa4f10>"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1510,7 +1510,6 @@
     "    return X, labels\n",
     "\n",
     "    \n",
-    "\n",
     "def mean_shift_slic(\n",
     "    image: np.ndarray,\n",
     "    max_iter: int = 20,\n",
@@ -1580,17 +1579,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 14,
    "id": "5856ca17",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x340323f50>"
+       "<matplotlib.image.AxesImage at 0x326849fd0>"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
